# julia-cpp-project-template

./: .gitignore  CMakeLists.txt  README.md
cpp_code/: .gitignore  bar.cpp  bar.hpp  c_interface.cpp  c_interface.h
cpp_code/ctest/: CMakeLists.txt  test.c
src/: main.jl
